@@ -1,3 +1,8 @@
+2017-02-24  Segher Boessenkool  <segher@kernel.crashing.org>
+
+	* config/pa/pa.c (pa_combine_instructions): Do not share RTL.  Make
+	the special USEs with the pattern of the insn, not the insn itself.
+
 2017-02-24  Matthew Fortune  <matthew.fortune@imgtec.com>
 
 	PR target/79473
